1. add micrometer-tracing 2. add accesslog 3. add RouteConfig.java(fixed route definition)